@@ -3,12 +3,16 @@ import path from "path";
 import { config } from "dotenv";
 import { expand } from "dotenv-expand";
 
+
+
 const appRoot = fs.realpathSync(__dirname);
 process.env.APP_ROOT_PATH = appRoot;
+
 
 const dotenvName = path.resolve(appRoot, ".env");
 
 const dotenvFiles = [`${dotenvName}.local`, dotenvName].filter(Boolean);
+
 
 dotenvFiles.forEach((path) => {
 	if (fs.existsSync(path)) {
