@@ -3,6 +3,8 @@
   "private": true,
   "description": "",
   "scripts": {
+    "ts": "ts-node --",
+    "dev": "ts-node-dev --",
     "dev:inspect": "ts-node-dev --inspect --",
     "postinstall": "prisma generate && prisma db push"
   },
@@ -16,6 +18,7 @@
     "prisma": "^4.16.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "yaml": "^2.3.1"
   }
 }
